--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,12 @@
 
-/* { border: 1px solid black; }
+body {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+}
+
+main {
+	flex: 1 0 auto;
+}
+
+/* { border: 1px solid black; } */
