--- a/templates/home.html
+++ b/templates/home.html
@@ -3,15 +3,31 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous" />
 		<title>Camagru</title>
+		<link rel="stylesheet" href="css/materialize/css/materialize.css" />
 		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body>
-		<header>snakes</header>
+		<header>
+			<nav>
+				<div class="nav-wrapper">
+					<a href="/" class="brand-logo">Camagru</a>
+					<ul id="nav-mobile" class="right hide-on-med-and-down">
+						<li><a href="/gallery">Gallery</a></li>
+						<li><a href="/create">Create</a></li>
+						<li><a href="/account">Account</a></li>
+					</ul>
+				</div>
+			</nav>
+		</header>
 
-		<div class="container">[@content]</div>
+		<div id="content" class="container">[@content]</div>
 
-		<footer>feets</footer>
+		<footer class="page-footer">
+			<div class="container">
+				<a class="grey-text text-lighten-4 right" href="#!">thank to Materialize.css</a>
+			</div>
+		</footer>
+
 	</body>
 </html>
