--- a/templates/home.html
+++ b/templates/home.html
@@ -13,21 +13,63 @@
 				<div class="nav-wrapper">
 					<a href="/" class="brand-logo">Camagru</a>
 					<ul id="nav-mobile" class="right hide-on-med-and-down">
-						<li><a href="/gallery">Gallery</a></li>
-						<li><a href="/create">Create</a></li>
-						<li><a href="/account">Account</a></li>
+						<li><a id="a_gallery" href="#gallery">Gallery</a></li>
+						<li><a id="a_create" href="#create">Create</a></li>
+						<li><a id="a_account" href="#account">Account</a></li>
 					</ul>
 				</div>
 			</nav>
 		</header>
 
-		<div id="content" class="container">[@content]</div>
+		<div id="page_content" class="container">
+
+			<section id="s_gallery" style="display: none">
+			</section>
+
+			<section id="s_create" style="display: none">
+			</section>
+
+			<section id="s_account" class="row" style="display: none">
+
+				<div id="d_logform">
+					<form id="form_log" class="col s6" action="#">
+						<h3>Connect</h3>
+						<label for="username">Username</label>
+						<input type="text" class="form-control" id="mail" aria-describedby="emailHelp" placeholder="Enter email">
+						<label for="pass">Password</label>
+						<input type="password" class="form-control" id="pass" placeholder="Password">
+						<button id="btn_log" class="btn">Submit</button>
+					</form>
+					<form id="form_register" class="col s6" action="#">
+						<h3>Register</h3>
+						<label for="username">Username</label>
+						<input type="text" id="username" aria-describedby="emailHelp" placeholder="Enter email">
+						<label for="mail">Email address</label>
+						<input type="email" id="mail" aria-describedby="emailHelp" placeholder="Enter email">
+						<label for="mail_confirmation">Email confirmation</label>
+						<input type="email" id="mail_confirmation" aria-describedby="emailHelp" placeholder="Enter email">
+						<label for="pass">Password</label>
+						<input type="password" id="pass" placeholder="Password">
+						<label for="pass_confirmation">Password confirmation</label>
+						<input type="password" id="pass_confirmation" placeholder="Password">
+						<button type="submit" class="btn">Submit</button>
+					</form>
+				</div> <!-- d_logform -->
+
+				<div id="d_account" style="hidden">
+					<p>hey [@user]</p>
+				</div> <!-- d_logform -->
+
+			</section>
+
+		</div><!-- page_content -->
 
 		<footer class="page-footer">
 			<div class="container">
 				<a class="grey-text text-lighten-4 right" href="#!">thank to Materialize.css</a>
 			</div>
 		</footer>
-
 	</body>
+	<script src="js/form_to_xhr.js"></script>
+	<script src="js/main.js"></script>
 </html>
