--- a/css/main.css
+++ b/css/main.css
@@ -9,4 +9,14 @@ main {
 	flex: 1 0 auto;
 }
 
+nav {
+	position: fixed;
+	top: 0;
+	z-index: 100;
+}
+
+#page_content {
+	margin-top: 100px;
+}
+
 /* { border: 1px solid black; } */
