--- a/templates/home.html
+++ b/templates/home.html
@@ -26,18 +26,22 @@
 
 			<!-- gallery -->
 			<section id="s_gallery" style="display: none" class="row">
-				<div id="d_img_0" class="col s3" style="display: none">
-					<div class="card blue-grey darken-1">
-						<div class="card-content white-text">
-							<span class="card-title"></span>
+				<div id="d_gallery">
+					<div id="d_img_0" class="col s3" style="display: none">
+						<div class="card blue-grey darken-1">
+							<div class="card-content white-text">
+								<span class="card-title"></span>
+							</div>
+							<div class="card-action">
+								<a href="#">like</a>
+								<a href="#">comment</a>
+							</div>
 						</div>
-						<div class="card-action">
-							<a href="#">like</a>
-							<a href="#">comment</a>
-						</div>
-					</div>
-				</div>
-			</section>
+					</div> <!-- /d_img_0 -->
+				</div> <!-- /d_gallery -->
+
+				<button id="btn_moreimgs" class="btn btn-large col s12">More images</button>
+			</section> <!-- /s_gallery -->
 
 			<!-- create -->
 			<section id="s_create" style="display: none">
@@ -46,12 +50,12 @@
 
 						<form id="form_creation" class="row">
 							<input id="creation_mask" type="file" class="col s3" />
-							<a class="waves-effect waves-light btn-large col s12">button</a>
+							<a class="waves-effect waves-light btn-large col s12">capture</a>
 						</form>
 
 					</div>
 					<div class="col s4" id="d_userimg">
-						<p>Your images</p>
+						<h5>Your images</h5>
 						<div id="d_userimg_0" class="col s12" style="display: none">
 							<div class="card blue-grey darken-1">
 								<div class="card-content white-text">
@@ -64,7 +68,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> <!-- /s_create -->
 
 			<!-- account -->
 			<section id="s_account" class="row" style="display: none">
@@ -93,7 +97,7 @@
 					</form>
 				</div> <!-- d_logform -->
 				<div id="d_account" style="hidden">
-					<h1>hey <span id="span_username">unknow</span></h1>
+					<h3 class="z-depth-5">hey <span id="span_username">unknow</span></h3>
 					<div id="d_usermodform">
 						<form id="form_moduser" class="col s8" action="#">
 
@@ -103,7 +107,16 @@
 							<label for="pass">Password</label>
 							<input type="password" class="form-control" id="pass" placeholder="Password">
 
-							<button id="btn_log" class="btn">Submit</button>
+							<!-- Switch -->
+							<div class="switch form-control">
+								<label>
+									<input type="checkbox" class="form-control">
+									<span class="lever"></span>
+									Send a mail when receive comment
+								</label>
+							</div>
+
+							<button id="btn_moduser" class="btn">Submit</button>
 						</form>
 					</div> <!-- d_usermod_form -->
 				</div> <!-- d_account -->
@@ -121,5 +134,6 @@
 	</body>
 	<script src="js/form_to_xhr.js"></script>
 	<script src="js/creation.js"></script>
+	<script src="js/gallery.js"></script>
 	<script src="js/main.js"></script>
 </html>
