--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
 								<span class="card-title"></span>
 							</div>
 							<div class="card-action">
-								<a href="#">like</a>
+								<a class="a_likes" href="#likes" onclick='like_it(this)'>like</a>
 								<a class="_comment" href="#comment" onclick='comment_show(this)'>comment</a>
 								<div class="dul_comment" style="display: none">
 									<ul class="ul_comment collection">
