--- a/templates/home.html
+++ b/templates/home.html
@@ -64,6 +64,9 @@
 				<div class="row">
 					<div class="col s8">
 
+						<div id="preview" class="row"></div>
+						<div id="filters" class="row"></div>
+
 						<form id="form_creation" class="row">
 							<input id="creation_mask" type="file" class="col s3" />
 							<a class="waves-effect waves-light btn-large col s12">capture</a>
