--- a/templates/home.html
+++ b/templates/home.html
@@ -73,8 +73,6 @@
 							<input id="creation_mask" type="file" class="btn col s3" />
 							<a disabled id="btn_capture" class="waves-effect waves-light btn-large col s12">capture</a>
 						</form>
-
-						<canvas id="canvas_photo" width=500 height=350></canvas>
 					</div>
 					<div class="col s4" id="d_userimg">
 						<h5>Your images</h5>
@@ -145,6 +143,7 @@
 							<button id="btn_moduser" class="btn">Submit</button>
 						</form>
 					</div> <!-- d_usermod_form -->
+					<button id="btn_mailme" class="btn btn-large">Mail Me</button>
 				</div> <!-- d_account -->
 			</section>
 
