--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,8 @@
 
 						<form id="form_creation" class="row">
 							<input id="creation_mask" type="file" class="btn col s3" />
-							<a disabled id="btn_capture" class="waves-effect waves-light btn-large col s12">capture</a>
+							<a disabled id="btn_capture" class="waves-effect waves-light btn-large col s10">capture</a>
+							<a id="btn_clearfilters" class="waves-effect waves-light btn-large col s2">clear filters</a>
 						</form>
 					</div>
 					<div class="col s4" id="d_userimg">
@@ -116,7 +117,7 @@
 						<button type="submit" class="btn">Submit</button>
 					</form>
 				</div> <!-- d_logform -->
-				<div id="d_account" style="hidden">
+				<div id="d_account" style="display: hidden">
 					<h3 class="z-depth-5">hey <span id="span_username">unknow</span></h3>
 					<div id="d_usermodform">
 						<form id="form_moduser" class="col s8 row" action="#">
