--- a/templates/home.html
+++ b/templates/home.html
@@ -94,18 +94,25 @@
 			<!-- account -->
 			<section id="s_account" class="row" style="display: none">
 				<div id="d_logform">
-					<form id="form_log" class="col s6" action="#">
-						<h3>Connect</h3>
-						<label for="username">Username</label>
-						<input type="text" class="form-control" id="mail" aria-describedby="emailHelp" placeholder="Enter email">
-						<label for="pass">Password</label>
-						<input type="password" class="form-control" id="pass" placeholder="Password">
-						<button id="btn_log" class="btn">Submit</button>
-					</form>
+					<div id="d_logorforgot" class="col s6">
+						<form id="form_log" action="#">
+							<h3>Connect</h3>
+							<label for="username">Mail</label>
+							<input type="text" class="form-control" id="mail_log" aria-describedby="emailHelp" placeholder="Enter email">
+							<label for="pass">Password</label>
+							<input type="password" class="form-control" id="pass_log" placeholder="Password">
+							<button id="btn_log" class="btn">Connect</button>
+						</form>
+						<form id="form_forgot">
+							<label for="username">Mail</label>
+							<input type="text" class="form-control" id="mail_forgot" aria-describedby="emailHelp" placeholder="Enter email">
+							<button id="btn_forgot" class="btn" type="submit">Forgot password ?</button>
+						</form>
+					</div> <!-- /d_logorforgot -->
 					<form id="form_register" class="col s6" action="#">
 						<h3>Register</h3>
 						<label for="username">Username</label>
-						<input type="text" id="username" aria-describedby="emailHelp" placeholder="Enter email">
+						<input type="text" id="username" aria-describedby="emailHelp" placeholder="Enter username">
 						<label for="mail">Email address</label>
 						<input type="email" id="mail" aria-describedby="emailHelp" placeholder="Enter email">
 						<label for="mail_confirmation">Email confirmation</label>
@@ -114,10 +121,10 @@
 						<input type="password" id="pass" placeholder="Password">
 						<label for="pass_confirmation">Password confirmation</label>
 						<input type="password" id="pass_confirmation" placeholder="Password">
-						<button type="submit" class="btn">Submit</button>
+						<button type="submit" class="btn">register</button>
 					</form>
-				</div> <!-- d_logform -->
-				<div id="d_account" style="display: hidden">
+				</div> <!-- /d_logform -->
+				<div id="d_account" style="display: none">
 					<h3 class="z-depth-5">hey <span id="span_username">unknow</span></h3>
 					<div id="d_usermodform">
 						<form id="form_moduser" class="col s8 row" action="#">
@@ -127,7 +134,6 @@
 
 							<label for="mod_pass_new">New password ? (else leave blank)</label>
 							<input type="password" class="form-control" id="mod_pass_new" placeholder="Password">
-
 
 							<label for="mod_pass">Password</label>
 							<input type="password" class="form-control" id="mod_pass" placeholder="Password">
@@ -143,7 +149,7 @@
 
 							<button id="btn_moduser" class="btn">Submit</button>
 						</form>
-					</div> <!-- d_usermod_form -->
+					</div> <!-- /d_usermod_form -->
 					<button id="btn_mailme" class="btn btn-large">Mail Me</button>
 				</div> <!-- d_account -->
 			</section>
