--- a/templates/home.html
+++ b/templates/home.html
@@ -36,10 +36,8 @@
 			<section id="s_gallery" style="display: none" class="row">
 				<div id="d_gallery">
 					<div id="d_img_0" class="col s6" style="display: none">
-						<div class="card blue-grey darken-1">
-							<div class="card-content white-text">
-								<span class="card-title"></span>
-							</div>
+						<div id="c_img_0" class="card blue-grey darken-1">
+								<img id="i_img_0" class="gal_imgs"/>
 							<div class="card-action">
 								<a class="a_likes" href="#likes" onclick='like_it(this)'>like</a>
 								<a class="_comment" href="#comment" onclick='comment_show(this)'>comment</a>
@@ -79,12 +77,8 @@
 						<h5>Your images</h5>
 						<div id="d_userimg_0" class="col s12" style="display: none">
 							<div class="card blue-grey darken-1">
-								<div class="card-content white-text">
-									<span class="card-title"></span>
-								</div>
-								<div class="card-action">
-									<button class="btn btn-small red">remove</button>
-								</div>
+								<img id="i_userimg_" class="create_previmgs"/>
+								<button class="btn btn-small red">remove</button>
 							</div>
 						</div>
 					</div>
@@ -141,16 +135,14 @@
 							<!-- Switch -->
 							<div class="switch">
 								<label>
-									<input type="checkbox" id="mail_notif">
-									<span class="lever"></span>
-									Send a mail when receive comment
+									<input type="checkbox" id="notif_mail" value="1">
+									<span id="lever" class="lever"></span>Send a mail when receive comment
 								</label>
 							</div>
 
 							<button id="btn_moduser" class="btn">Submit</button>
 						</form>
 					</div> <!-- /d_usermod_form -->
-					<button id="btn_mailme" class="btn btn-large">Mail Me</button>
 				</div> <!-- d_account -->
 			</section>
 
