+image size on creations

--- a/templates/home.html
+++ b/templates/home.html
@@ -65,7 +65,11 @@
 						<div id="preview" class="row valign-wrapper">
 							<video id="cam"></video>
 						</div>
-						<div id="filters" class="row"></div>
+						<div id="filters" class="row">
+							<img class="masks" src="/imgs/1.png"/>
+							<img class="masks" src="/imgs/2.png"/>
+							<img class="masks" src="/imgs/3.png"/>
+						</div>
 
 						<form id="form_creation" class="row">
 							<input id="creation_mask" type="file" class="btn col s3" />
