--- a/css/main.css
+++ b/css/main.css
@@ -9,12 +9,6 @@ body {
 	margin-top: 10px;
 }
 
-/*
-.card {
-	min-height: 15em;
-}
-*/
-
 .masks {
 	height: 20%;
 	width: 20%;
@@ -27,12 +21,6 @@ body {
 
 main {
 	flex: 1 0 auto;
-}
-
-#preview {
-	min-height: 80%;
-	min-width: 50%;
-	border: 2px solid grey;
 }
 
 #d_notif {
@@ -52,6 +40,12 @@ main {
 
 #b_notif {
 	color: rgb(246, 100, 150);
+}
+
+@media handheld {
+	* {
+		border: 2px solid black;
+	}
 }
 
 /* { border: 1px solid black; } */
