a bit more secu

--- a/templates/home.html
+++ b/templates/home.html
@@ -113,15 +113,11 @@
 					<form id="form_register" class="col s6" action="#">
 						<h3>Register</h3>
 						<label for="username">Username</label>
-						<input type="text" id="username" aria-describedby="emailHelp" placeholder="Enter username">
+						<input type="text" id="username" placeholder="Enter username">
 						<label for="mail">Email address</label>
-						<input type="email" id="mail" aria-describedby="emailHelp" placeholder="Enter email">
-						<label for="mail_confirmation">Email confirmation</label>
-						<input type="email" id="mail_confirmation" aria-describedby="emailHelp" placeholder="Enter email">
+						<input type="email" id="mail" placeholder="Enter email">
 						<label for="pass">Password</label>
 						<input type="password" id="pass" placeholder="Password">
-						<label for="pass_confirmation">Password confirmation</label>
-						<input type="password" id="pass_confirmation" placeholder="Password">
 						<button type="submit" class="btn">register</button>
 					</form>
 				</div> <!-- /d_logform -->
@@ -129,16 +125,12 @@
 					<h3 class="z-depth-5">hey <span id="span_username">unknow</span></h3>
 					<div id="d_usermodform">
 						<form id="form_moduser" class="col s8 row" action="#">
-
-							<input type="text" class="form-control" id="mod_username" aria-describedby="emailHelp" placeholder="Enter email">
-							<input type="email" id="mod_mail" aria-describedby="emailHelp" placeholder="Enter email">
-
+							<input type="text" class="form-control" id="mod_username" placeholder="Enter email">
+							<input type="email" id="mod_mail" placeholder="Enter email">
 							<label for="mod_pass_new">New password ? (else leave blank)</label>
 							<input type="password" class="form-control" id="mod_pass_new" placeholder="Password">
-
 							<label for="mod_pass">Password</label>
 							<input type="password" class="form-control" id="mod_pass" placeholder="Password">
-
 							<!-- Switch -->
 							<div class="switch">
 								<label>
@@ -146,7 +138,6 @@
 									<span id="lever" class="lever"></span>Send a mail when receive comment
 								</label>
 							</div>
-
 							<button id="btn_moduser" class="btn">Submit</button>
 						</form>
 					</div> <!-- /d_usermod_form -->
